--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -8,8 +8,8 @@
 			href="https://fonts.googleapis.com/css?family=Lato:300,300i,700"
 			rel="stylesheet"
 		/>
-		<link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="shortcut icon" type="image/png" href="/img/favicon.png" />
+		<link rel="stylesheet" href="/css/style.css" />
 
 		<title>Natours | <%= title %></title>
 	</head>
