--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,19 +4,19 @@
 		<form class="nav__search">
 			<button class="nav__search-btn">
 				<svg>
-					<use xlink:href="img/icons.svg#icon-search"></use>
+					<use xlink:href="/img/icons.svg#icon-search"></use>
 				</svg>
 			</button>
 			<input type="text" placeholder="Search tours" class="nav__search-input" />
 		</form>
 	</nav>
 	<div class="header__logo">
-		<img src="img/logo-white.png" alt="Natours logo" />
+		<img src="/img/logo-white.png" alt="Natours logo" />
 	</div>
 	<nav class="nav nav--user">
 		<a href="#" class="nav__el">My bookings</a>
 		<a href="#" class="nav__el">
-			<img src="img/users/default.jpg" alt="User photo" class="nav__user-img" />
+			<img src="/img/users/default.jpg" alt="User photo" class="nav__user-img" />
 			<span>Abhinav</span>
 		</a>
 
