--- a/views/tours/index.ejs
+++ b/views/tours/index.ejs
@@ -9,7 +9,7 @@
 					<div class="card__picture-overlay">&nbsp;</div>
 					<img
 						class="card__picture-img"
-						src="img/tours/<%= tour.imageCover %>"
+						src="/img/tours/<%= tour.imageCover %>"
 						alt="<%= tour.name %>"
 					/>
 				</div>
