--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header class="header">
 	<nav class="nav nav--tours">
-		<a href="#" class="nav__el">All tours</a>
+		<a href="/tours" class="nav__el">All tours</a>
 		<form class="nav__search">
 			<button class="nav__search-btn">
 				<svg>
@@ -14,13 +14,13 @@
 		<img src="/img/logo-white.png" alt="Natours logo" />
 	</div>
 	<nav class="nav nav--user">
-		<a href="#" class="nav__el">My bookings</a>
+		<!-- <a href="#" class="nav__el">My bookings</a>
 		<a href="#" class="nav__el">
 			<img src="/img/users/default.jpg" alt="User photo" class="nav__user-img" />
 			<span>Abhinav</span>
-		</a>
+		</a> -->
 
-		<!-- <button class="nav__el">Log in</button>
-		<button class="nav__el nav__el--cta">Sign up</button> -->
+		<a class="nav__el" href="/login">Log in</a>
+		<a class="nav__el nav__el--cta">Sign up</a>
 	</nav>
 </header>
