--- a/views/tours/show.ejs
+++ b/views/tours/show.ejs
@@ -3,8 +3,7 @@
 <head>
     <%- include('../partials/head') %>
 
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js'></script>
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet' />
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet' />
 </head>
 <body>
     <%- include('../partials/header') %>
@@ -140,11 +139,10 @@
             </div>
         </div>
     </section>
-
-    <%- include('../partials/footer') %>
-
-    <!-- used to define the mapbox key used by mapbox.js -->
+    
+    <!-- define the variable before you include footer -->
+    <!-- as the footer contains bundle.js which uses this mapbox key -->
     <script>const mapboxKey = '<%= mapboxAccessToken %>'</script>
-    <script src="/js/mapbox.js"></script>
+    <%- include('../partials/footer') %>
 </body>
 </html>
