--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -9,7 +9,7 @@
     <main class="main">
         <div class="login-form">
             <h2 class="heading-secondary ma-bt-lg">Log into your account</h2>
-            <form class="form">
+            <form class="form form-login">
                 <div class="form__group">
                     <label class="form__label" for="email">Email address</label>
                     <input
