--- a/views/users/account.ejs
+++ b/views/users/account.ejs
@@ -67,7 +67,7 @@
                 <div class="line">&nbsp;</div>
                 <div class="user-view__form-container">
                     <h2 class="heading-secondary ma-bt-md">Password change</h2>
-                    <form class="form form-user-settings">
+                    <form class="form form-user-password">
                         <div class="form__group">
                             <label class="form__label" for="password-current"
                                 >Current password</label
@@ -106,7 +106,7 @@
                             />
                         </div>
                         <div class="form__group right">
-                            <button class="btn btn--small btn--green">Save password</button>
+                            <button class="btn btn--small btn--green btn--save-password">Save password</button>
                         </div>
                     </form>
                 </div>
