Use ejs-mate for layouts

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,23 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <%- include('partials/head') %>
-</head>
-<body>
-    <%- include('partials/header') %>
+<%- layout('layouts/boilerplate') %>
 
-    <main class="main">
-        <div class="error">
-            <div class="error__title">
-                <h2 class="heading-secondary heading-secondary--error">
-                    An error encountered!
-                </h2>
-            </div>
-            <div class="error__msg"><%= errmsg %></div>
+<main class="main">
+    <div class="error">
+        <div class="error__title">
+            <h2 class="heading-secondary heading-secondary--error">
+                An error encountered!
+            </h2>
         </div>
-    </main>
-
-    <%- include('partials/footer') %>
-</body>
-</html>
-
+        <div class="error__msg"><%= errmsg %></div>
+    </div>
+</main>
