--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
 		<img src="/img/logo-white.png" alt="Natours logo" />
 	</div>
 	<nav class="nav nav--user">
-        <% if (locals.user) { %>
+        <% if (typeof user !== 'undefined') { %>
             <a href="#" class="nav__el nav__el--logout">Logout</a>
             <a href="/my-account" class="nav__el">
                 <img src="/img/users/<%= user.photo %>" alt="<%= user.name %> photo" class="nav__user-img" />
