--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -13,7 +13,7 @@
 
     <%- block('styles').toString() %>
 
-    <title>Natours | <%= title %></title>
+    <title>WanderQuest | <%= title %></title>
 </head>
 <body>
     <%- include('../partials/header') %>
