--- a/views/email.ejs
+++ b/views/email.ejs
@@ -302,7 +302,7 @@
 															<p>Hi <%= firstName %>,</p>
 															
 															<% if (type === 'welcome') { %>
-																<p>Welcome to Natours, we're glad to have you 🎉🙏</p>
+																<p>Welcome to WanderQuest, we're glad to have you 🎉🙏</p>
 																<p>We're all a big family here, so make sure to upload your user photo so we get to know you a bit better!</p>
 															<% } else { %>
 																<p>Forgot your password? Submit a PATCH request with your new password and passwordConfirm to:</p>
@@ -364,8 +364,7 @@
 										<tr>
 											<td class="content-block">
 												<span class="apple-link"
-													>Natours Inc, 123 Nowhere Road, San
-													Francisco CA 99999</span
+													>&copy; WanderQuest 2024</span
 												><br />
 												Don't like these emails?
 												<a href="#">Unsubscribe</a>
