--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
 		</form>
 	</nav>
 	<div class="header__logo">
-		<img src="/img/logo-white.png" alt="Natours logo" />
+		<img src="/img/logo-white.png" alt="WanderQuest logo" />
 	</div>
 	<nav class="nav nav--user">
         <% if (typeof user !== 'undefined') { %>
