--- a/views/tours/show.ejs
+++ b/views/tours/show.ejs
@@ -120,7 +120,7 @@
 <section class="section-cta">
     <div class="cta">
         <div class="cta__img cta__img--logo">
-            <img src="/img/logo-white.png" alt="Natours logo" />
+            <img src="/img/logo-white.png" alt="WanderQuest logo" />
         </div>
         <img class="cta__img cta__img--1" src="/img/tours/<%= tour.images[0] %>" alt="" />
         <img class="cta__img cta__img--2" src="/img/tours/<%= tour.images[1] %>" alt="" />
